# ha-deterministic-voice-agent

./: .gitignore  LICENSE  README.md  requirements.txt  roadmap.md  sync_entities.py
.github/workflows/: ci.yml
assets/: architecture.d2  entity_resolution.d2  request_flow.d2  safety_gate.d2  workspace.dsl
homeassistant/custom_components/deterministic_agent/: __init__.py  config_flow.py  const.py  conversation.py  manifest.json  strings.json
orchestrator/: embedder.go  glm.go  go.mod  intent.go  main.go  resolver.go  safety.go
orchestrator-rs/: Cargo.toml
orchestrator-rs/src/: cache.rs  config.rs  conversation.rs  embedder_local.rs  ha_ws.rs  intent_local.rs  main.rs  main_test.rs  ml_clients.rs  models.rs  resolver.rs  safety.rs  safety_test.rs  simd_ops.rs  sync.rs
systemd/: deterministic-agent.service  entity-sync.service  entity-sync.timer  intent-llm.service  pgvector.service
