[package]
name = "orchestrator-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Runtime & Web Framework
tokio = { version = "1.37", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # for slower compatibility paths or testing if needed
simd-json = "0.13" # AVX2/AVX-512 accelerated JSON

# Database
# Note: Since the orchestrator matches pgvector arrays, we need sqlx and pgvector.
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls"] }
pgvector = { version = "0.3", features = ["sqlx"] }

# HTTP Client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Utilities
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
thiserror = "1.0"
once_cell = "1.19"
multiversion = "0.7.3" # To compile AVX2/AVX512 specific codepaths dynamically
