[package]
name = "orchestrator-rs"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "orchestrator"
path = "src/main.rs"

[dependencies]
# Async Runtime & Web Framework
tokio = { version = "1.37", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = "0.13"
toml = "0.8"

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls"] }
pgvector = { version = "0.3", features = ["sqlx"] }

# HTTP Client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }

# Caching
dashmap = "5.5"

# ONNX Runtime for in-process ML inference (CUDA + CPU)
ort = { version = "2.0.0-rc.11", features = ["cuda", "ndarray"] }
ndarray = "0.17"
tokenizers = "0.20"

# SIMD / Acceleration
multiversion = "0.7.3"

# Observability
tracing = "0.1"
tracing-subscriber = "0.3"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Utilities
futures = "0.3"
futures-util = "0.3"
thiserror = "1.0"
once_cell = "1.19"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
tokio-stream = "0.1"
